# embedded-experiments

./: .gitignore  Cargo.toml  README.md  ZEPHYR_NOTES.md
.github/: dependabot.yml
.github/prompts/: git-commit.prompt.md
.github/workflows/: branch-protection.yaml
ble-notification/: Cargo.toml  memory.x
ble-notification/src/: storage.rs
embassy-experiment/: Cargo.toml  memory.x
embassy-experiment/.cargo/: config.toml
embassy-experiment/src/: main.rs  notify_server.rs  storage.rs
embedded-workspace/: .gitignore  SETUP.md
embedded-workspace/peripheral-beacon/: CMakeLists.txt  prj.conf
embedded-workspace/peripheral-beacon/src/: connection.c  external_readings.c  main.c
embedded-workspace/peripheral-notify/: CMakeLists.txt  prj.conf
embedded-workspace/peripheral-notify/src/: connection.h  external_readings.h  main.c  storage.h
embedded-workspace/peripheral-periodic/: CMakeLists.txt  prj.conf
embedded-workspace/peripheral-periodic/src/: connection.h  external_readings.h  main.c  storage.h
esp32/.zed/: settings.json
esp32/ble-advertise/: CLAUDE.md  Cargo.toml
esp32/ble-advertise/.cargo/: config.toml
esp32/ble-advertise/.zed/: settings.json
esp32/ble-advertise/src/: common.rs  main.rs  storage.rs
esp32/event-beacon/: CLAUDE.md  Cargo.toml
esp32/event-beacon/.cargo/: config.toml
esp32/event-beacon/.zed/: settings.json
esp32/event-beacon/ble-advertise/: Cargo.toml
esp32/event-beacon/ble-advertise/src/: common.rs  gatt.rs  led.rs  main.rs
esp32/event-beacon/event-storage/: Cargo.toml
esp32/event-beacon/event-storage/src/: lib.rs  storage.rs
esp32/write-led/: Cargo.toml
esp32/write-led/.cargo/: config.toml
esp32/write-led/src/: common.rs  led.rs  main.rs
host/: Cargo.toml
host/charting/: Cargo.toml
host/charting/src/: logging.rs  main.rs
host/read-usb/: Cargo.toml
host/read-usb/src/: main.rs
host/subscriber/: CLAUDE.md  Cargo.toml
host/subscriber/src/: scanner.rs
nRF52840/: Cargo.toml
nRF52840/.cargo/: config.toml
nRF52840/.zed/: settings.json
nRF52840/ble-beacon/: .rules  Cargo.toml  memory.x
nRF52840/ble-beacon/.cargo/: config.toml
nRF52840/ble-beacon/.zed/: settings.json
nRF52840/ble-beacon/src/: beacon_server.rs  main.rs  storage.rs  tasks.rs
nRF52840/ble-notification/src/: common.rs  main.rs  storage.rs  tasks.rs
nRF52840/unlock/: Cargo.toml
nRF52840/unlock/src/: main.rs
notifier/: .gitignore  CMakeLists.txt  JLINK_NOTES.md  prj.conf
notifier/src/: connection.c  connection.h  external_readings.c  external_readings.h  main.c  storage.c  storage.h
pico-2w/: Cargo.toml  build.rs
pico-2w-i2c-usb/: build.rs
pico-2w-i2c-usb/src/: main.rs  usb.rs
pico-2w-ina228/: Cargo.toml
pico-2w-ina228/.cargo/: config.toml
pico-2w-ina228/src/: linux.rs  main.rs
pico-2w/.cargo/: config.toml
pico-2w/blinky/: Cargo.toml
pico-2w/blinky/src/: common.rs  main.rs
pico-2w/i2c-usb/: Cargo.toml
pico-2w/i2c-usb/src/: main.rs
pico-2w/ina228/: Cargo.toml
pico-2w/ina228/src/: main.rs
pico-2w/sensor/: Cargo.toml
pico-2w/sensor/src/: main.rs
pico-2w/src/: main.rs
probe-rs-api/: .gitignore  Cargo.toml
probe-rs-api/src/: main.rs
read-usb/src/: main.rs
subscriber/src/: main.rs  scanner.rs
