[package]
name = "embassy-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
defmt = { version = "1" }
defmt-rtt = "1"
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf = { version = "0.6.0", features = ["nrf52840", "gpiote", "time", "time-driver-rtc1"] }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
futures = { version = "0.3.31", default-features = false }
heapless = { version = "0.9.1" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = ["defmt", "nrf52840", "s140", "critical-section-impl", "ble-peripheral", "ble-gatt-server"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }