[package]
name = "subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
btleplug = { version = "0.11" }
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
