[package]
name = "unlock"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = { version = "1" }
defmt-rtt = "1"
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-nrf = { version = "0.8.0", features = ["nrf52840", "gpiote", "unstable-pac"] }
embassy-sync = { version = "0.7.2" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
