[package]
name = "blinky"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.6" }
cortex-m-rt = { version = "0.7.0" }
defmt = "1"
defmt-rtt = "1"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.8.0", features = ["critical-section-impl", "time-driver", "defmt", "rp235xa"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
heapless = { version = "0.9.1", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["defmt"] }
static_cell = "2.1"
