[package]
name = "ble-advertise"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
bt-hci = "0.6.0"
critical-section = "1.2.0"
defmt = "1"
defmt-rtt = { version = "1", features = ["disable-blocking-mode"] }
embassy-executor = { version = "0.9.0" }
embassy-futures = "0.1.2"
embassy-sync = { version = "0.7.2" }
embassy-time = "0.5.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = ["panic-handler", "esp32c6", "defmt"] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32c6", "unstable", "defmt"] }
esp-radio = { version = "0.16.0", features = [  "ble",  "esp-alloc",  "esp32c6",  "unstable", "defmt"] }
esp-rtos = { version = "0.1.1", features = ["embassy",  "esp-alloc",  "esp-radio",  "esp32c6"] }
event-storage = { path = "../event-storage" }
heapless = { version = "0.9.1" }
static_cell = "2.1.1"
trouble-host = { version = "0.5.0", features = ["defmt"] }
uuid = { version = "1.18.1", default-features = false }
